--- a/QRcode/MainWindow.xaml
+++ b/QRcode/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:QRcode"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="411.229" Width="468.221" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
+        Title="MainWindow" Height="411.229" Width="468.221" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -15,10 +15,11 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Grid VerticalAlignment="Top" Height="52" Background="#87CEFA" x:Name="DragGrid" MouseDown="DragGrid_MouseDown"></Grid>
-        <Grid VerticalAlignment="Top" Height="160" Margin="62,179,72,0" >
-            <Button Content="Create QR code" Grid.Column="0" Width="178" Height="31" HorizontalContentAlignment="Left" FontWeight="Bold" Click="btn_CreateQR" Margin="78,36,78,93"/>
-            <Button Content="Scan QR code" Grid.Column="0" Width="178" Height="31" HorizontalContentAlignment="Left" FontWeight="Bold" Click="btn_ScanQR" Margin="78,102,78,0" VerticalAlignment="Top"/>
+        <Grid VerticalAlignment="Top" Height="288" Margin="62,76,50,0" >
+            <Image Source="/QRcode;component/Resources/IDS.png" Stretch="Uniform" Margin="0,0,0,56"/>
+            <Button Content="Create QR code" Grid.Column="0" Height="31" HorizontalContentAlignment="Left" FontWeight="Bold" Click="btn_CreateQR" Margin="0,255,184,2"/>
+            <Button Content="Scan QR code" Grid.Column="0" Height="32" HorizontalContentAlignment="Left" FontWeight="Bold" Click="btn_ScanQR" Margin="200,254,0,0" VerticalAlignment="Top"/>
         </Grid>
-        <TextBlock HorizontalAlignment="Left" Height="51" Margin="146,78,0,0" TextWrapping="Wrap" Text="QR code" VerticalAlignment="Top" Width="186" FontFamily="Segoe Print" FontSize="36" FontWeight="Bold" FontStyle="Italic"/>
+        <TextBlock HorizontalAlignment="Left" Height="55" Margin="140,-3,0,0" TextWrapping="Wrap" Text="QR code" VerticalAlignment="Top" Width="186" FontFamily="Segoe Print" FontSize="36" FontWeight="Bold" FontStyle="Italic"/>
     </Grid>
 </Window>
