--- a/QRcode/ScanQRcode.xaml
+++ b/QRcode/ScanQRcode.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QRcode"
         xmlns:wpfmedia="clr-namespace:WPFMediaKit.DirectShow.Controls;assembly=WPFMediaKit"
+        xmlns:materilDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="ScanQRcode" Height="478.683" Width="569.264">
-    <Grid Margin="0,0,5.5,-2">
+        Title="ScanQRcode" Height="478.683" Width="1040.864">
+    <Grid Margin="0,0,3.4,-2.2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="86*"/>
             <ColumnDefinition Width="237*"/>
@@ -17,7 +18,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Background="LightBlue" Grid.Row="0" Grid.ColumnSpan="2" Margin="0,47,0,18.5" Grid.RowSpan="2">
+        <StackPanel Background="LightBlue" Grid.Row="0" Grid.ColumnSpan="2" Margin="31,86,579.2,25.2" Grid.RowSpan="2">
             <wpfmedia:VideoCaptureElement x:Name="vce" Stretch="Fill" Width="auto" Height="auto" Margin="0" Grid.Row="0" RenderTransformOrigin="0.5,0.5">
                 <wpfmedia:VideoCaptureElement.RenderTransform>
                     <TransformGroup>
@@ -29,10 +30,30 @@
             </wpfmedia:VideoCaptureElement>
         </StackPanel>
 
-        <Label x:Name="label" Content="Open Camera：" Grid.Column="0"  Width="97" HorizontalAlignment="Right" Margin="0,10,10,281.5" />
-        <ComboBox x:Name="cb" Width="204" HorizontalAlignment="Left" Margin="95,10,0,289.5" SelectionChanged="cb_SelectionChanged" Grid.Column="1"  />
-        <Button  Content="Start" x:Name="btn_start" Click="Start_Click"  Width="68" Grid.Row="2" Grid.Column="1" Height="Auto" HorizontalAlignment="Left" Margin="9,20.5,0,16"/>
-        <Button  Content="Stop" x:Name="btn_reStart" Click="Restart_Click" Width="78" Grid.Row="2" Grid.Column="1" Height="Auto" HorizontalAlignment="Left" Margin="128,21.5,0,16"/>
+        <Label x:Name="label1" Content="Open Camera：" Grid.Column="0"  Width="142" HorizontalAlignment="Right" Margin="0,10,101.4,265.4" FontSize="18" FontWeight="Bold" />
+        <ComboBox x:Name="cb" Width="204" HorizontalAlignment="Left" Margin="223,10,0,265.4" SelectionChanged="cb_SelectionChanged" Grid.ColumnSpan="2" Height="47"  />
+        <Button  Content="Start" x:Name="btn_start" Click="Start_Click"  Width="68" Grid.Row="2" Height="Auto" HorizontalAlignment="Left" Margin="93,9.8,0,27.2" RenderTransformOrigin="-0.357,0.918"/>
+        <Button  Content="Stop" x:Name="btn_reStart" Click="Restart_Click" Width="78" Grid.Row="2" Grid.Column="1" Height="Auto" HorizontalAlignment="Left" Margin="28.6,9.8,0,28.2" RenderTransformOrigin="0.842,0.556"/>
 
+        <Label x:Name="label2" Content="Scan by inserting a picture：" Grid.Column="1"  Width="263" HorizontalAlignment="Right" Margin="0,25,181.5,250.5" FontWeight="Bold" FontSize="18"/>
+        <StackPanel Margin="312.6,86,38.2,25.2" Grid.Column="1" Grid.RowSpan="2">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Margin="0,10" FontSize="16" x:Name="textQR" Height="313" RenderTransformOrigin="0.5,0.5">
+                    <TextBox.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleX="0.232"/>
+                            <RotateTransform/>
+                            <TranslateTransform X="0.538"/>
+                        </TransformGroup>
+                    </TextBox.RenderTransform>
+                </TextBox>
+            </ScrollViewer>
+        </StackPanel>
+        <Button x:Name="btnScan" Click="btnScan_Click"  Margin="627,26,38.5,265.5" Grid.Column="1" >
+            <StackPanel>
+                <TextBlock Text="Select"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </Window>
